Ensure playername not wrap in crazy analysis

--- a/project/src/styl/analyse.styl
+++ b/project/src/styl/analyse.styl
@@ -128,6 +128,11 @@
         width calc(((100vw - (100vh - 50px - 12vh)) * 40 / 100) / 6 + 10px)
         height calc(((100vw - (100vh - 50px - 12vh)) * 40 / 100) / 6 + 10px)
 
+.analysePlayerName.crazy
+  white-space nowrap
+  overflow hidden
+  text-overflow ellipsis
+
 .analyseOpening
   height 34px
   line-height 25px
